CBA/files/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: "backstage"
  namespace: backstage
spec:
  selector:
    app.kubernetes.io/name: backstage
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
