CBA/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: backstage
spec:
  rules:
    - host: backstage.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "backstage"
              port:
                number: 7007
